--- a/Web-Apps/Mangoes-Classifier/app/view/index.html
+++ b/Web-Apps/Mangoes-Classifier/app/view/index.html
@@ -50,8 +50,8 @@
         </div>
 
       <div class="section notes">
-        <p>Our classifier was trained with images from 2 classes (Palmer and Tommy Atkins) and 90% of well classified images had a class confidence level greater than 79% for Palmer and 68% for Tommy Atkins.</p>
-        <p>Therefore, any image analyzed here with a confidence level lower than the one of its predicted class will be considered as "unrecognized" (example: if the classifier assigns an image a confidence level of 78% for the Palmer class, "unrecognized" will be displayed).</p>
+        <p>Our classifier was trained with images from 2 classes (Palmer and Tommy Atkins) and 90% of well classified images had a class confidence level greater than 79% for Palmer and 68% for Tommy Atkins.
+        <br />Therefore, any image analyzed here with a confidence level lower than the one of its predicted class will be considered as "unrecognized" (example: if the classifier assigns an image a confidence level of 78% for the Palmer class, "unrecognized" will be displayed).</p>
       </div>
 
     </div>
