--- a/Web-Apps/Mangoes-Classifier/app/view/index.html
+++ b/Web-Apps/Mangoes-Classifier/app/view/index.html
@@ -18,6 +18,9 @@
 
         <div class='section header'>
           <header class='top-header'>
+            <div>
+                <img src='../static/images/mango.png' alt="mango">
+            </div>
             <h1>Mangoes Classifier</h1>
             <p>Use images of <a href='https://en.wikipedia.org/wiki/Palmer_(mango)' target='_blank'>Palmer</a> or <a href='https://en.wikipedia.org/wiki/Tommy_Atkins_(mango)' target='_blank'>Tommy Atkins</a> mangoes!</p>
           </header>
