--- a/Web-Apps/ImageNet-Classifier/app/view/index.html
+++ b/Web-Apps/ImageNet-Classifier/app/view/index.html
@@ -18,8 +18,10 @@
 
         <div class='section header'>
           <header class='top-header'>
-            <div><a href='http://image-net.org/' target='_blank' title='Site of ImageNet'>
-                <img src='../static/images/logo_imagenet.jpg'></a>
+            <div>
+                <a href='http://image-net.org/' target='_blank' title='Site of ImageNet'>
+                    <img src='../static/images/logo_imagenet.jpg'>
+                </a>
             </div>
             <h1>Take a picture and classify it </h1>
           </header>
