edit imagenet index

--- a/Web-Apps/ImageNet-Classifier/app/view/index.html
+++ b/Web-Apps/ImageNet-Classifier/app/view/index.html
@@ -51,7 +51,7 @@
                         <label id='result-label'></label>
                     </div>
                     <div class="image-picked">
-                        <img id='image-picked' class='no-display' alt='Chosen Image' width='200'>
+                        <img id='image-picked' class='no-display' alt='Chosen Image' height='200'>
                     </div>
                     <div class='upload-label'>
                         <label id='upload-label' class='center'>No file chosen</label>
