--- a/Web-Apps/ImageNet-Classifier/app/view/index.html
+++ b/Web-Apps/ImageNet-Classifier/app/view/index.html
@@ -60,9 +60,11 @@
         </div>
 
         <div class="section notes">
-                    <p>[ Terms ] This Web App is a prototype of an image classifier.
+                    <p>
+                        [ WARNINGS ]
+                        <br />This Web App is a prototype of an image classifier. It classifies an image into 1000 categories (<a href='https://www.kaggle.com/c/imagenet-object-localization-challenge/data' target='_blank' title="Download file LOC_synset_mapping.txt">list in the ImageNet Kaggle competition</a>) displaying the 3 most probable ones with their respective probabilities. 
                         <br />It uses the <a href='https://pytorch.org/docs/stable/torchvision/models.html#torchvision.models.resnet50' target='_blank'>resnet50 layers version</a> of the Deep Learning model that won the ImageNet competition in 2015 (<a href='http://image-net.org/challenges/LSVRC/2015/' target='_blank'>ILSVRC2015</a>).
-                        <br />It can classify an image into 1000 categories (<a href='https://www.kaggle.com/c/imagenet-object-localization-challenge/data' target='_blank' title="Download file LOC_synset_mapping.txt">list in the ImageNet Kaggle competition</a>), which means that some pictures will not be well labeled (for example, the mango category does not belong to theses 1000 classes).
+                        <br />As a prototype, this Web App could run slowly and as the ImageNet model has been trained with 1000 categories, some pictures could not be well labeled (for example, the mango category does not belong to these 1000 classes).
                     </p>
         </div>
 
