update title and description

--- a/Web-Apps/glasses-or-not/app/view/index.html
+++ b/Web-Apps/glasses-or-not/app/view/index.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset='utf-8'>
     <link rel='stylesheet' href='../static/style.css'>
     <script src='../static/client.js'></script>
-	<title>Macbook or not macbook?</title>
+	<title>Glasses or not?</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -20,9 +20,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->	
 <div>
     <div class='center'>
-        <div class='title'>Mac-or-not book?</div>
+        <div class='title'>Glasses or not?</div>
         <p>
-	    Use images of <strong>macbook</strong> 💻 or <strong>notmacbooks</strong>!
+	    Use images of faces with <strong>glasses</strong> or <strong>without glasses</strong>!
         </p>
         <div class='content'>
             <div class='no-display'>
